--- a/Portfolio Site/style.css
+++ b/Portfolio Site/style.css
@@ -527,6 +527,7 @@ header {
   font-size: 8rem;
   color: #0769fc;
   font-weight: 500;
+  text-decoration: underline;
   margin-bottom: 1rem;
 }
 .head-bracket {
