--- a/Portfolio Site/style.css
+++ b/Portfolio Site/style.css
@@ -512,6 +512,23 @@ header {
   display: inline;
 }
 
+.blink {
+    animation: blink 2.5s steps(5, start) infinite;
+    -webkit-animation: blink 1s steps(5, start) infinite;
+    }
+  @keyframes blink {
+    to {
+       visibility: hidden;
+    }
+  }
+  @-webkit-keyframes blink {
+    to {
+       visibility: hidden;
+    }
+  }
+
+
+
 /* Projects */
 
 #project-intro {
